styles.css
* {
	box-sizing: border-box;
	margin: 0px;
}

html, body {
	padding: 0px;
}

#main-container {
	min-width: 100vw;
	display: flex;
	flex-direction: column;
	align-items: center;
	padding-top: 70px;
	min-height: 100vh;
	background: rgb(230, 230, 230);

}

#nav {
	position: fixed;
	min-width: 100vw;
	min-height: 70px;
	max-height: 70px;
	display: flex;
	justify-content: space-between;
	align-items: center;
	background: rgba(25, 25, 100, 1);
	box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.5);
	padding: 0px;
}

#logo-container {
	user-select: none;
	min-height: 70px;
	margin: 0px;
	display: flex;
	justify-content: flex-start;
	align-items: center;
	padding-right: 10px;
	transition: background 0.1s linear;
}

#logo-container:hover {
	background: rgba(255, 255, 255, 0.2);
}

#logo {
	min-width: 100px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	color: white;
	font-family: serif;
	font-size: 20px;
}

#logo-top {
	margin-bottom: -3px;
}

#logo-img {
	height: 50px;
	margin: 0px 10px 0px 10px;
}

#add-book-button {
	display: flex;
	justify-content: center;
	align-items: center;
	color: white;
	min-height: 45px;
	max-height: 45px;
	min-width: 45px;
	max-width: 45px;
	font-size: 48px;
	padding: 0px;
	margin: 0px 20px 0px 10px;
	border-radius: 50%;
	transition: background 0.1s linear, transform 0.2s linear;
	overflow: hidden;
}

#add-book-button p {
	margin: 0px;
	padding: 0px;
	user-select: none;
}

#add-book-button:hover {
	background: rgba(255, 255, 255, 0.2);
	transform: rotate(90deg);
}

#book-form {
	position: fixed;
	width: 500px;
	background: rgba(25, 25, 50, 0.8);
	padding: 30px;
}

#book-form form {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: center;
	line-height: 1.5em;
	color: white;
	font-size: 22px;
	font-family: sans-serif;
}

#book-form form label {
	align-self: flex-start;
}

.book-input {
	width: 100%;
	height: 36px;
	font-size: 24px;
	margin-bottom: 20px;
}

.radio-button-container {
	display: grid;
	grid-template-columns: 1fr 2fr 1fr 2fr;
	width: 50%;
	justify-content: center;
	align-items: center;
	margin-bottom: 20px;
}

#book-form-button-container {
	margin-top: 20px;
	display: grid;
	width: 100%;
	grid-gap: 20px;
	grid-template-columns: 1fr 1fr;
	grid-template-rows: 50px;
}

.book-form-button {
	display: flex;
	justify-content: center;
	align-items: center;
	user-select: none;
	height: 100%;
	width: 100%;
}

.book-form-button:hover {
	border-style: solid;
	border-width: 3px;
	border-color: white;
}

#form-cancel {
	background: #DF0000e8;
}

#form-submit {
	background: #00b600e8;
}

#footer {
	background: rgba(25, 25, 50, 1);
	min-height: 200px;
	min-width: 100vw;
	display: flex;
	justify-content: center;
	align-items: center;
}

#footer img {
	width: 100px;
}

#card-container {
	display: flex;
	width: 100%;
	flex-wrap: wrap;
}

.book-card {
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: 1fr 50px;
	overflow: hidden;
	min-width: 300px;
	max-width: 300px;
	min-height: 400px;
	max-height: 400px;
	margin: 5px;
	border-radius: 5px;
	transition: box-shadow 0.4s ease;
}

.book-card:hover {
	box-shadow: inset 10px 10px 30px rgba(0, 0, 0, 0.5), inset -10px -60px 30px rgba(0, 0, 0, 0.5);
}

.book-card-top-container {
	grid-row: 1/2;
	height: 100%;
	width: 100%;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: flex-end;
	color: white;
	font-family: sans-serif;
	font-size: 24px;
	padding: 10px;
}

.book-card-top-container p {
	text-shadow: 2px 1px 3px rgba(0, 0, 0, 1);
	font-weight: 200;
}

.book-card-author {
	font-size: 18px;
}

.book-card-pagenumber {
	font-size: 16px;
}

.book-card-button-container {
	grid-row: 2/3;
	display: grid;
	grid-template-columns: 50px 50px 1fr;
	grid-template-rows: 50px;
}

.card-button {
	display: flex;
	justify-content: center;
	align-items: center;
}

.book-card-edit {
	background: url("edit-xxl.png"), #808080e8;
	background-size: 50%;
	background-repeat: no-repeat;
	background-position: center;
}

.book-card-remove {
	background: url("trash-2-xxl.png"), #DF0000e8;
	background-size: 50%;
	background-repeat: no-repeat;
	background-position: center;
}

.book-card-read {
	color: white;
	font-family: sans-serif;
	font-size: 22px;
	font-weight: 200;
	background: #3700d0e8;
	user-select: none;
}

.book-card-read-complete {
	background: #00b600e8;
}

#empty {
	display: flex;
	height: calc(100vh - 70px);
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

#empty h2 {
	font-size: 56px;
	color: gray;
}

#empty p {
	font-size: 18px;
	color: gray;
	text-align: center;
}

.hidden {
	display: none;
}

